b=22497. Changed ReflowBlock() to better calculate the x-offset where the table will be positioned